--- a/style.css
+++ b/style.css
@@ -80,14 +80,14 @@ button {
     color: orange;
 }
 .imgpub{
-    margin-left: 660px;
-    width : 1000px;
-    height : 175px;
+    margin-left: 27%;
+    width : 45%;
+    height : 45%;
 }
 .imggarage{
-    margin-top: -30px;
-    width : 2300px;
-    height : 900px;
+    margin-top: -1%;
+    width : 100%;
+    height : 50%;
 }
 
 .link{
