--- a/style.css
+++ b/style.css
@@ -95,13 +95,13 @@ button {
         color: white; /*par exemple*/
 }
 .txtroy{
-    margin: -765px auto;
-    padding-left: 800px;
+    margin: -32% auto;
+    padding-left: 34%;
 }
 .cntct{
-    margin-top: 800px;
-    padding-right: 1000px;
+    margin-top: 34%;
+    padding-right: 80%;
 }
 .barre{
-    font-size: 2px;
+    font-size: 2%;
 }
