--- a/style.css
+++ b/style.css
@@ -105,3 +105,68 @@ button {
 .barre{
     font-size: 2%;
 }
+.logobar{
+    padding-left: 25%;
+}
+
+
+
+
+
+
+
+/*CNTCT*/
+
+
+
+ul{
+    font-family: 'Amatic SC', cursive;
+    font-size: 30px;
+    list-style-type: none;
+    width:150px;
+}
+
+li{
+    padding:15px;
+    border:1px solid rgb(255, 255, 255);
+    margin:5px;
+}
+li:hover{
+    background-color: cornflowerblue    ;
+    color:white
+}
+
+a{
+    text-decoration: none;
+}
+
+li a:link, li a:visited {
+    color: rgb(255, 255, 255)
+}
+
+a{
+    color: cornflowerblue;
+}
+a:hover{
+    text-decoration: underline overline;
+}
+
+#img1{
+    border:2px solid cornflowerblue;
+    margin-top:15px;
+}
+
+table{
+    border-collapse: collapse;
+    border:1px solid rgb(255, 255, 255);
+    color: white;
+}
+
+#employes{
+    font-variant: small-caps;
+    color:cornflowerblue;
+    font-weight: bold;
+}
+.contact{
+    width:500px;
+}
