--- a/style.css
+++ b/style.css
@@ -114,15 +114,6 @@ input{
     color:white;
 }
 
-
-
-
-
-
-/*CNTCT*/
-
-
-
 ul{
     font-family: 'Amatic SC', cursive;
     font-size: 30px;
@@ -173,4 +164,42 @@ table{
 }
 .contact{
     width:500px;
+}
+
+.tri-horizontal {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    color: #333;
+}
+  
+.tri-horizontal select {
+    border: none;
+    background-color: transparent;
+    font-size: inherit;
+    margin-right: 10px;
+}
+  
+.arrow-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5px;
+}
+  
+.arrow {
+    display: block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 6px 5px 0 5px;
+    border-color: #aaa transparent transparent transparent;
+    cursor: pointer;
+}
+  
+.up {
+    margin-bottom: 4px;
+}
+  
+.down {
+    margin-top: 4px;
 }
