--- a/style.css
+++ b/style.css
@@ -274,3 +274,18 @@ b::selection {
 center::selection {
     background: #bf8b42;
   }
+
+.actubenjamin{
+  width: 40%;
+}
+.actubenjamintxt{
+  margin-top: -27%;
+  margin-left: 41%;
+}
+.actuugo{
+  width: 40%;
+}
+.actuugotxt{
+  margin-top: -27%;
+  margin-left: 41%;
+}
