--- a/style.css
+++ b/style.css
@@ -280,15 +280,16 @@ center::selection {
   width: 40%;
 }
 .actubenjamintxt{
-  margin-top: -27%;
+  margin-top: -26.5%;
   margin-left: 41%;
 }
 .actuugo{
   width: 40%;
+  margin-left: 60%;
 }
 .actuugotxt{
   margin-top: -27%;
-  margin-left: 41%;
+  margin-right: 40%;
 =======
 .formulaire {
     background: #bf8b42;
