--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ link::selection {
     padding-left: 25%;
 }
 input{
-    color:white;
+    color:rgb(122, 122, 122);
 }
 input::selection {
     background: #bf8b42;
@@ -288,13 +288,24 @@ center::selection {
 }
 .actuugotxt{
   margin-top: -27%;
-<<<<<<< HEAD
-  margin-right: 40%;
-=======
-=======
+  margin-right: 41%;
+}
+.acturemi{
+  width: 40%;
+}
+.acturemitxt{
+  margin-top: -26.5%;
   margin-left: 41%;
 }
->>>>>>> f6fed2756f3e195665dd5a21bc1ac634dd467557
+.actumael{
+  width: 40%;
+  margin-left: 60%;
+  margin-bottom: 5%;
+}
+.actumaeltxt{
+  margin-top: -27%;
+  margin-right: 41%;
+}
 .formulaire {
     background: #bf8b42;
     color: #fff;
