--- a/style.css
+++ b/style.css
@@ -311,3 +311,16 @@ center::selection {
     color: #fff;
     border-style: double; 
 }
+
+.TCata {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+  text-align: center;
+}
+td:not(:last-child) {
+  border-right: 1px solid #ddd;
+}
+tr:not(:last-child) {
+  border-bottom: 1px solid #ddd;
+}
