--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ button::selection {
     background: blue;
   }
 .orange{
-    color: blue;
+    color: cornflowerblue;
 }
 .imgpub{
     margin-left: 27%;
