--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-color: #000000;
 }
 body::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 header{
@@ -43,34 +43,34 @@ p{
         font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 p::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 h1{
     color:white;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 h1::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 h2{
     color:white;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 h2::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 h3{
     color:white;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 h3::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 h4{
     color:white
 }
 h4::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 .popup {
@@ -86,7 +86,7 @@ h4::selection {
     color: gray;
 }
 .popup::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 button {
     background-color: #575757;
@@ -98,10 +98,10 @@ button {
     width: 300px;
 }
 button::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 .orange{
-    color: cornflowerblue;
+    color: cornflowerDodgerBlue;
 }
 .imgpub{
     margin-left: 27%;
@@ -109,7 +109,7 @@ button::selection {
     height : 45%;
 }
 .imgpub::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 .imggarage{
     margin-top: -1%;
@@ -117,7 +117,7 @@ button::selection {
     height : 50%;
 }
 .imggarage::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 .link{
@@ -125,7 +125,7 @@ button::selection {
         color: white; /*par exemple*/
 }
 link::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 .txtroy{
     margin: -42% auto;
@@ -158,7 +158,7 @@ input{
     color:rgb(122, 122, 122);
 }
 input::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 ul{
@@ -168,7 +168,7 @@ ul{
     width:150px;
 }
 ul::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 li{
@@ -177,10 +177,10 @@ li{
     margin:5px;
 }
 li::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 li:hover{
-    background-color: cornflowerblue    ;
+    background-color: cornflowerDodgerBlue    ;
     color:white
 }
 
@@ -188,7 +188,7 @@ a{
     text-decoration: none;
 }
 a::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 li a:link, li a:visited {
@@ -196,14 +196,14 @@ li a:link, li a:visited {
 }
 
 a{
-    color: cornflowerblue;
+    color: DodgerBlue;
 }
 a:hover{
     text-decoration: underline overline;
 }
 
 #img1{
-    border:2px solid cornflowerblue;
+    border:2px solid DodgerBlue;
     margin-top:15px;
 }
 
@@ -213,12 +213,12 @@ table{
     color: white;
 }
 table::selection {
-    background: blue;
+    background: DodgerBlue;
   }
 
 #employes{
     font-variant: small-caps;
-    color:cornflowerblue;
+    color:DodgerBlue;
     font-weight: bold;
 }
 .contact{
@@ -265,7 +265,7 @@ table::selection {
   margin-right: 41%;
 }
 .formulaire {
-    background: blue;
+    background: DodgerBlue;
     color: #fff;
     border-style: double; 
 }
@@ -283,5 +283,5 @@ tr:not(:last-child) {
 }
 .olink{
   text-decoration: none;
-  color: blue;
+  color: DodgerBlue;
 }
