--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ button::selection {
     background: DodgerBlue;
   }
 .orange{
-    color: cornflowerDodgerBlue;
+    color: DodgerBlue;
 }
 .imgpub{
     margin-left: 27%;
